--- a/.gitignore
+++ b/.gitignore
@@ -2,23 +2,10 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
 
-# testing
-/coverage
-
-# next.js
+# build output
 /.next/
 /out/
-
-# production
-/build
 
 # misc
 .DS_Store
@@ -28,7 +15,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
+
+# local env files
+.env*.local
+.env
 
 # vercel
 .vercel
@@ -37,9 +28,8 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-.genkit/*
-.env*
-
-# firebase
-firebase-debug.log
-firestore-debug.log
+# data files
+src/lib/data.json
+src/lib/dti-tech-blogs.json
+src/lib/explore-resiliency-program.json
+src/lib/tech-sphere-sessions.json
