--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,43 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
+/.pnp
+.pnp.js
 
-# build output
+# Testing
+/coverage
+
+# Next.js build output
 /.next/
 /out/
 
-# misc
+# Production
+/build
+
+# Misc
 .DS_Store
 *.pem
 
-# debug
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 
-# local env files
-.env*.local
-.env
+# Local environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-
-# data files
+# WCE Dashboard Data Files
+src/lib/data.json
 src/lib/dti-tech-blogs.json
 src/lib/explore-resiliency-program.json
 src/lib/tech-sphere-sessions.json
+src/lib/squad-onboarding.json
+src/lib/arc-trainings.json
+src/lib/app-sherpas.json
+src/lib/hackathons.json
+src/lib/industry-events.json
+src/lib/jira-assistant-adoption/
