--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,5 @@ src/lib/app-sherpas.json
 src/lib/jira-assistant-adoption/
 src/lib/tech-sphere-sessions.json
 src/lib/squad-onboarding.json
+src/lib/jira-assistant-adoption
 node_modules
