--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,33 @@
-# Dependencies
-/node_modules
-/.pnp
-.pnp.js
-.yarn/install-state.gz
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Next.js
+# dependencies
+/node_modules
+
+# build
 /.next/
 /out/
 
-# Production
-/build
-
-# Miscellaneous
+# misc
 .DS_Store
 *.pem
 
-# Debug logs
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# Local environment files
+# local env files
+.env
 .env*.local
 
-# Vercel
+# vercel
 .vercel
 
-# TypeScript
-*.tsbuildinfo
+# turbo
+.turbo
 
-# Application Data Files
+# data files
 src/lib/data.json
 src/lib/dti-tech-blogs.json
 src/lib/explore-resiliency-program.json
@@ -41,5 +38,3 @@ src/lib/squad-onboarding.json
 src/lib/arc-trainings.json
 src/lib/app-sherpas.json
 src/lib/jira-assistant-adoption/
-node_modules/
-node_modules/
