--- a/package.json
+++ b/package.json
@@ -47,5 +47,11 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "optionalDependencies": {
+    "@next/swc-darwin-arm64": "15.3.3",
+    "@next/swc-darwin-x64": "15.3.3",
+    "@next/swc-linux-x64-gnu": "15.3.3",
+    "@next/swc-win32-x64-msvc": "15.3.3"
   }
 }
