--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.5.0",
     "firebase": "^11.9.1",
     "lucide-react": "^0.475.0",
